Project

General

Profile

Actions

Bug #41010

closed

rgw s3 lifecycle expiration header does not return the rule with the earliest date

Added by Or Friedmann over 4 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
backport_processed
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rgw
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

  1. The bucket lifecycle ruleset
    s3_connection.put_bucket_lifecycle_configuration(
    Bucket=bucket_name,
    LifecycleConfiguration= {
    "Rules": [ {
    "Filter": {
    "Tag": {"Key": "suffix2", "Value": "WMV2"}
    },
    "Status": "Enabled",
    "Expiration": {
    "Date": "2017-01-01"
    },
    "ID": "WMV2"
    }, {
    "Filter": {
    "Tag": {"Key": "suffix", "Value": "WMV"}
    },
    "Status": "Enabled",
    "Expiration": {
    "Date": "2021-01-01"
    },
    "ID": "WMV"
    }
    ]
    }
    )
  2. tagging on the object
    s3_connection.put_object_tagging(
    Bucket=bucket_name,
    Key=object_key,
    Tagging={'TagSet': [{'Key': 'suffix', 'Value': 'WMV'},{'Key': 'suffix2', 'Value': 'WMV2'}]}
    )

returns:

the expiration date of rule WMV and the name of the WMV rule.


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #43927: nautilus: rgw s3 lifecycle expiration header does not return the rule with the earliest dateRejectedMatt BenjaminActions
Actions #1

Updated by Mark Kogan over 4 years ago

  • Pull request ID set to 29399
Actions #3

Updated by Patrick Donnelly over 4 years ago

  • Project changed from Ceph to rgw
  • Status changed from New to Fix Under Review
Actions #4

Updated by Matt Benjamin over 4 years ago

  • Status changed from Fix Under Review to 17
Actions #5

Updated by Patrick Donnelly over 4 years ago

  • Status changed from 17 to Fix Under Review
Actions #6

Updated by Ken Dreyer about 4 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to nautilus
Actions #7

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #43927: nautilus: rgw s3 lifecycle expiration header does not return the rule with the earliest date added
Actions #8

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #9

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF