rgw: Fix expiration header does not return the earliest rule that will be applied

Fix expiration header does not return the earliest rule that will be applied

Fixes: https://tracker.ceph.com/issues/41010
Resolves: rhbz#1731486

Signed-off-by: Or Friedmann <ofriedma@redhat.com>
(cherry picked from commit 9b433e52179675c457f603a8e9ec8cd157fa59d2)
Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>